# claudebot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.ru.md  pyproject.toml  topic_config.example.json
.claude/skills/bot-setup/: SKILL.md
.claude/skills/project-knowledge/references/: architecture.md  configuration.md  release-safety.md
.claude/skills/topic-setup/: SKILL.md
.codex/skills/bot-setup/: SKILL.md
.codex/skills/project-knowledge/references/: architecture.md  configuration.md  release-safety.md
.codex/skills/topic-setup/: SKILL.md
.github/workflows/: ci.yml
docs/: macos-setup.md
docs/systemd/: telegram-bot.service.template
mcp-servers/bot/: server.py  start.sh
scripts/: release-public.sh
src/telegram_bot/: __main__.py
src/telegram_bot/core/: config.py  keyboards.py  messages.py  types.py
src/telegram_bot/core/handlers/: _dispatch.py  cancel.py  commands.py  forward.py  mode.py  photo.py  streaming.py  text.py  unsupported.py  video_note.py  voice.py
src/telegram_bot/core/health/: __init__.py  healthcheck.py  heartbeat.py  state.py
src/telegram_bot/core/middleware/: auth.py
src/telegram_bot/core/services/: bot_commands.py  (+21 more)
src/telegram_bot/prompts/: default.md  task-manager.md
tests/: test_auth.py  test_bot_lock.py  test_button_filters_language.py  test_checkpoint_on_reset.py  test_file_lock.py  test_forward_batcher_media.py  test_health.py  test_liveplus_mode.py  test_mcp_file_allowlist.py  test_message_queue.py  test_messages_lang.py  test_outbox.py  test_preflight.py  test_reply_streaming_resume.py  test_reset_handlers.py  test_resolve_reply_routing.py  test_sender_attribution.py  test_sender_attribution_hotpath.py  test_session_persistence.py  test_shutdown_isolation.py  test_ssrf_and_forward_sanitize.py  test_streaming_argv.py  test_streaming_manager.py  test_streaming_routing.py  test_streaming_session.py  test_sysprompt_command.py  test_telegram_html.py  test_telegram_utils_fatal.py  test_text_normalize.py  test_topic_config_prompts.py  test_topic_system_prompt.py  test_voice_streaming_routing.py
tests/fakes/: fake_claude_stream.py
(+6 files in other folders)
